deploy/conf/k8s/external-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: externalhost
spec:
  type: ExternalName
  externalName: host.docker.internal
