deploy/conf/k8s/externalproxy-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: externalhost
spec:
  selector:
    app: puzzleproxy
  ports:
  - name: postgre
    protocol: TCP
    port: 5432
    targetPort: postgre-service
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: redis-service
  - name: http
    protocol: TCP
    port: 9080
    targetPort: http-service
  - name: mongo
    protocol: TCP
    port: 27017
    targetPort: mongo-service
