deploy/conf/k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  labels:
    monitoring: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
  - port: 8080
    targetPort: 9090
