deploy/conf/k8s/puzzleblog-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzleblog-service
spec:
  selector:
    app: puzzleblog
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
