deploy/conf/k8s/puzzlecachedright-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzlecachedright-service
spec:
  selector:
    app: puzzlecachedright
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
