deploy/conf/k8s/puzzleforum-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzleforum-service
spec:
  selector:
    app: puzzleforum
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
