deploy/conf/k8s/puzzlelogin-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzlelogin-service
spec:
  selector:
    app: puzzlelogin
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
