deploy/conf/k8s/puzzlemarkdown-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzlemarkdown-service
spec:
  selector:
    app: puzzlemarkdown
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
