deploy/conf/k8s/puzzleprofile-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzleprofile-service
spec:
  selector:
    app: puzzleprofile
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
