deploy/conf/k8s/puzzleright-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzleright-service
spec:
  selector:
    app: puzzleright
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
