deploy/conf/k8s/puzzlesalt-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzlesalt-service
spec:
  selector:
    app: puzzlesalt
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
