deploy/conf/k8s/puzzlesession-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzlesession-service
spec:
  selector:
    app: puzzlesession
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
