deploy/conf/k8s/puzzlesettings-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzlesettings-service
spec:
  selector:
    app: puzzlesettings
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
