deploy/conf/k8s/puzzletest-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzletest-service
spec:
  selector:
    app: puzzletest
  ports:
  - protocol: TCP
    port: 9080
    targetPort: http-service
