deploy/conf/k8s/puzzlewiki-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: puzzlewiki-service
spec:
  selector:
    app: puzzlewiki
  ports:
  - protocol: TCP
    port: 50051
    targetPort: grpc-service
